<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="total_format">Total: €0.00</string>
    <string name="no_expenses_text">No expenses yet</string>
    <string name="delete_expense">Delete expense</string>
    <string name="hint_expense_name">Expense name</string>
    <string name="hint_expense_amount">Amount</string>
    <string name="add_expense_title">Add Expense</string>

    <string name="error_name_required">Please enter a name</string>
    <string name="error_amount_required">Please enter an amount</string>
    <string name="error_amount_invalid">Amount must be a number</string>
    <string name="error_amount_positive">Amount must be greater than 0</string>

    <string name="category_label">Category</string>
    <string name="save_button">Save</string>

    <string-array name="expense_categories">
        <item>Other</item>
        <item>Food</item>
        <item>Transport</item>
        <item>Shopping</item>
        <item>Bills</item>
        <item>Entertainment</item>
    </string-array>

    <string name="btn_show_summary">Show Summary</string>
    <string name="summary_total_fmt">Total: €%.2f</string>
    <string name="summary_title">Summary</string>
    <string name="summary_total_placeholder">Total: €0.00</string>

</resources>